# CodeWhale

./: .cnb.yml  .gitignore  CHANGELOG.md  COMMIT_MSG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.ja-JP.md  README.md  README.zh-CN.md  config.example.toml  flake.nix
.github/scripts/: update-homebrew-tap.sh
.github/workflows/: ci.yml  nightly.yml  release.yml  sync-cnb.yml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/app-server/: Cargo.toml
crates/app-server/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  update.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/hooks/src/: lib.rs
crates/secrets/src/: lib.rs
crates/tools/: Cargo.toml
crates/tui/: CHANGELOG.md  Cargo.toml
crates/tui/src/: acp_server.rs  child_env.rs  client.rs  compaction.rs  config.rs  config_ui.rs  dependencies.rs  eval.rs  handoff.rs  localization.rs  main.rs  mcp.rs  models.rs  palette.rs  prefix_cache.rs  pricing.rs  project_context.rs  prompts.rs  purge.rs  runtime_log.rs  runtime_threads.rs  session_manager.rs  settings.rs  slop_ledger.rs  task_manager.rs  theme_qa_audit.rs
crates/tui/src/client/: chat.rs
crates/tui/src/commands/: change.rs  config.rs  core.rs  debug.rs  init.rs  jobs.rs  mod.rs  provider.rs  rename.rs  session.rs  skills.rs
crates/tui/src/core/: engine.rs  events.rs  ops.rs  session.rs  turn.rs
crates/tui/src/prompts/: agent.txt  base.md  base.txt  memory_guidance.md
crates/tui/src/repl/: runtime.rs
crates/tui/src/rlm/: bridge.rs  prompt.rs  turn.rs
crates/tui/src/sandbox/: seatbelt.rs
deploy/tencent-lighthouse/cnb/: README.md  cnb.yml.example
deploy/tencent-lighthouse/examples/: feishu-bridge.env.example  runtime.env.example
deploy/tencent-lighthouse/systemd/: deepseek-feishu-bridge.service  deepseek-runtime.service
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  CNB_MIRROR.md  CONFIGURATION.md  DOCKER.md  INSTALL.md  KEYBINDINGS.md  MODES.md  RUNTIME_API.md  TENCENT_CLOUD_REMOTE_FIRST.md  TENCENT_LIGHTHOUSE_HK.md  TOOL_SURFACE.md
integrations/feishu-bridge/: .env.example  README.md  package-lock.json  package.json
integrations/feishu-bridge/scripts/: validate-config.mjs
integrations/feishu-bridge/src/: index.mjs  lib.mjs
integrations/feishu-bridge/test/: lib.test.mjs  startup-order.test.mjs
nix/: package.nix
npm/codewhale/: package.json
npm/deepseek-tui/: package.json
npm/deepseek-tui/scripts/: install.js
npm/deepseek-tui/test/: install.test.js  postinstall.test.js
scripts/release/: check-versions.sh
scripts/tencent-lighthouse/: bootstrap-ubuntu.sh  doctor.sh  install-services.sh
web/: package-lock.json  package.json
web/app/[locale]/: page.tsx
web/components/: footer.tsx  install-binary.tsx  nav.tsx
web/lib/: deepseek.ts  facts.generated.ts  github.test.ts  github.ts
(+88 files in other folders)
