[package]
name = "codewhale-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Codex-style app-server transport for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
codewhale-agent = { path = "../agent", version = "0.8.43" }
codewhale-config = { path = "../config", version = "0.8.43" }
codewhale-core = { path = "../core", version = "0.8.43" }
codewhale-execpolicy = { path = "../execpolicy", version = "0.8.43" }
codewhale-hooks = { path = "../hooks", version = "0.8.43" }
codewhale-mcp = { path = "../mcp", version = "0.8.43" }
codewhale-protocol = { path = "../protocol", version = "0.8.43" }
codewhale-state = { path = "../state", version = "0.8.43" }
codewhale-tools = { path = "../tools", version = "0.8.43" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
