[package]
name = "deepseek-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core runtime boundaries for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
deepseek-agent = { path = "../agent", version = "0.8.39" }
deepseek-config = { path = "../config", version = "0.8.39" }
deepseek-execpolicy = { path = "../execpolicy", version = "0.8.39" }
deepseek-hooks = { path = "../hooks", version = "0.8.39" }
deepseek-mcp = { path = "../mcp", version = "0.8.39" }
deepseek-protocol = { path = "../protocol", version = "0.8.39" }
deepseek-state = { path = "../state", version = "0.8.39" }
deepseek-tools = { path = "../tools", version = "0.8.39" }
serde_json.workspace = true
uuid.workspace = true
